# ic-event-hub-token-ledgers-example

./: .gitignore  dfx.json
ledger-1/: Cargo.toml  build.sh  can.did
ledger-1/src/: actor.rs
ledger-1/src/common/: ledger.rs
ledger-2/: Cargo.toml  build.sh  can.did
ledger-2/src/: actor.rs
ledger-2/src/common/: ledger.rs  mod.rs  types.rs
token/: Cargo.toml  build.sh  can.did
token/src/: actor.rs
token/src/common/: currency_token.rs  guards.rs  types.rs
